--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "boxicons": "^2.1.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
